namespace java.swift net.gdface.facelog
namespace py gdface.thrift
namespace java com.gdface
namespace cpp gdface



struct TestBean {
  1:  binary blob;
}

